tests/instantiating/stream_conflict_param_return/stderr.golden
error: cannot instantiate 'R' functionality: all 'stream' inner functionalities must be of the same base type and must be 'param' or 'return', 'R' base type is 'return'
bus.fbd +4:2
   |
 4 | 	My_Stream stream
   | 	^^^^^^^^^
